--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,9 @@
                 "-lsfml-graphics",
                 "-lsfml-window",
                 "-lsfml-system",
+                "-lopengl32", 
+                "-lgdi32",
+                "-lglu32",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
